# bank-account-service-example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test.sh
app/: app.db  app.py  settings.py
app/accountservice/: controllers.py  models.py
migrations/versions/: dfeb3c70b39a_.py
